--- a/Pro/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Pro/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -234,7 +234,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-1.0,\"y\":-1.0,\"z\":13.0}}"
+                "value": "{\"m_Value\":{\"x\":-0.04759478569030762,\"y\":7.0,\"z\":-0.9705705642700195}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
